--- a/.woodpecker/.tag.yml
+++ b/.woodpecker/.tag.yml
@@ -1,11 +1,11 @@
 pipeline:
   release:
-    image: woodpeckerci/plugin-docker-buildx
+    image: redpencil/plugin-docker-buildx
     settings:
       platforms: linux/amd64,linux/arm64
       repo: "${CI_REPO_OWNER##mu-}/${CI_REPO_NAME%%-service}"
       tags: "${CI_COMMIT_TAG##v}"
-    secrets: [ docker_username, docker_password ]
+    secrets: [ docker_username, docker_password, ssh_key, remote_builders ]
     when:
       event: tag
       tag: v*
